--- a/OneDrive/Desktop/coso/css/session.css
+++ b/OneDrive/Desktop/coso/css/session.css
@@ -170,6 +170,7 @@ footer{
   background-color: rgb(0, 0, 0, 1);
   border: 2px solid rgba(255, 0, 0, 1);
   border-radius: 1rem;
+  text-align: center;
 }
 
 .hideConteiner{
@@ -179,6 +180,17 @@ footer{
 .trueEmail{
   border: 2px solid rgba(0, 128, 0, 1);
   background-color: rgba(0, 128, 0, 0.2);
+}
+
+footer{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+footer > img{
+  width: 20vw;
+  height: 20vh;
 }
 
 @media (max-width: 480px) {
